syntax = "proto3";

package test.user.v1;

// User message representing a user profile
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  UserType type = 5;
  Address address = 6;
}

// Address for a user
message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
}

// Type of user account
enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_REGULAR = 1;
  USER_TYPE_ADMIN = 2;
}

// User service
service UserService {
  rpc GetUser(GetUserRequest) returns (User);
  rpc CreateUser(CreateUserRequest) returns (User);
}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}
